--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
+
+RPEnglish.MVC/Data/data.s3db
+RPEnglish.API/Data/data.s3db
